src/test/06-Errors/error-add-assign-decl.txt
error-add-assign-decl.ck:1:7: error: cannot perform '+=>' on a variable declaration...
[1] "foo" +=> string s;
          ^
error-add-assign-decl.ck: ...(hint: use '=>' instead to initialize the variable)
